--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.1",
